font issue and overflow issue

--- a/EuroSpaceCenter/Content/site.css
+++ b/EuroSpaceCenter/Content/site.css
@@ -19,12 +19,17 @@ img {
 .panel-image img {
     width: 100%;
     height: 200px;
-	object-fit: cover;
+    object-fit: cover;
+    font-family: 'object-fit: cover;';
 }
 
 .emoji {
     font-weight: normal;
     font-family: "Apple Color Emoji","Segoe UI Emoji","NotoColorEmoji","Segoe UI Symbol","Android Emoji","EmojiSymbols";
+}
+
+body {
+    font-family: -apple-system,Segoe UI,Segoe UI Emoji,sans-serif;
 }
 
 /* background for jumbo */
@@ -46,15 +51,15 @@ input[type=range] {
     padding: 6px 0;
 }
 
-input[type=range]:active, input[type=range]:focus {
-    box-shadow: none;
-}
+    input[type=range]:active, input[type=range]:focus {
+        box-shadow: none;
+    }
 
-input[type=range]:after {
-    content: attr(data-value);
-    transform: translateY(2em);
-    display: block;
-}
+    input[type=range]:after {
+        content: attr(data-value);
+        transform: translateY(2em);
+        display: block;
+    }
 
 /* smaller container */
 .container.container--small {
